--- a/style.css
+++ b/style.css
@@ -1,526 +1,561 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     font-family: 'Poppins', sans-serif;
 }
 
-.header{
-    min-height:100vh;
-    width:100;
-    background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7) ),url(assets/champus\ 22.\ .png);
+.header {
+    min-height: 100vh;
+    width: 100;
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(assets/champus\ 22.\ .png);
     background-position: center;
     background-size: cover;
     position: relative;
 
 }
-nav{
-    display:flex;
-    padding:2% 6%;
-    justify-content:space-between;
-    align-items:center;
+
+nav {
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
 
 }
 
-nav img{
-    width:60px;
+nav img {
+    width: 60px;
     border-radius: 50%;
 }
 
-.nav-links{
-    flex:1;
-    text-align:right;
-} 
-
-.nav-links ul li{
-    list-style:none;
-    display:inline-block;
-    padding: 8px 12px;
-    position:relative;
+.nav-links {
+    flex: 1;
+    text-align: right;
 }
 
-.nav-links ul li a{
-    color:#fff;
+.nav-links ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.nav-links ul li a {
+    color: #fff;
     text-decoration: none;
     font-size: 13px;
     text-transform: uppercase;
 }
-.nav-links ul li .current{
+
+.nav-links ul li .current {
     font-weight: bold;
 
 }
-.nav-links ul li::after{
-    content:'';
-    width:0%;
-    height:2px;
+
+.nav-links ul li::after {
+    content: '';
+    width: 0%;
+    height: 2px;
     background: #1D9BF0;
-    display:block;
-    margin:auto;
+    display: block;
+    margin: auto;
 }
-.nav-links ul li:hover::after{
-    width:100%;
-    transition:0.5s;
+
+.nav-links ul li:hover::after {
+    width: 100%;
+    transition: 0.5s;
 }
-nav .fa-sharp{
-    display:none;
+
+nav .fa-sharp {
+    display: none;
 }
 
 
-.text-box{
-    width:90%;
-    color:#fff;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+.text-box {
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
 }
 
-.text-box h1{ 
-    font-size:62px;
+.text-box h1 {
+    font-size: 62px;
 
 }
 
-.text-box p{
+.text-box p {
     margin: 10px 0 40px;
     font-size: 14px;
-    color:#fff;
+    color: #fff;
     text-overflow: hidden;
 }
 
-.hero-btn{
+.hero-btn {
     display: inline-block;
-    text-decoration:none;
-    color:#fff;
-    border:1px solid #fff;
-    padding:12px 34px;
-    font-size:13px;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
     background: transparent;
-    position:relative;
-    cursor:pointer;
-    top:2em;
+    position: relative;
+    cursor: pointer;
+    top: 2em;
 }
 
-.hero-btn:hover{
+.hero-btn:hover {
     border: 1px solid #1D9BF0;
     background: #1D9BF0;
-    transition:1s;
+    transition: 1s;
 }
 
 @media (max-width:700px) {
-    .text-box h1{
+    .text-box h1 {
         font-size: 24px;
     }
 
-    .nav-links ul li{
-        display:block
+    .nav-links ul li {
+        display: block
     }
 
-    .nav-links{
-        position:fixed;
-        background:#1D9BF0;
-        height:100vh;
-        width:200px;
-        top:0;
-        right:-200px;
+    .nav-links {
+        position: fixed;
+        background: #1D9BF0;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
         text-align: left;
         z-index: 2;
-        transition:1s;
+        transition: 1s;
     }
 
-    nav .fa-sharp{
-        display:block;
-        color:#fff;
-        margin:10px;
-        font-size:22px;
-        cursor:pointer;
-          
+    nav .fa-sharp {
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+
     }
 
-    .nav-links ul{
-        padding:30px;
+    .nav-links ul {
+        padding: 30px;
     }
 }
 
 
 .course {
-    width:80%;
-    margin:auto;
-    text-align:center;
-    padding-top:100px;
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
 }
 
-h1{
-    font-size:36px;
-    font-weight:600;
+h1 {
+    font-size: 36px;
+    font-weight: 600;
 }
 
-p{
-    color:#777;
+p {
+    color: #777;
     font-size: 14px;
-    font-weight:300px;
-    line-height:22px;
-    padding:10px;
+    font-weight: 300px;
+    line-height: 22px;
+    padding: 10px;
 }
 
-.row{
-    margin-top:5%;
-    display:flex;
-    justify-content:space-between;
+.row {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
 }
-.course-col{
-    flex-basis:31%;
-    background:#0ACF83;
-    border-radius:10px;
-    margin-bottom:5%;
+
+.course-col {
+    flex-basis: 31%;
+    background: #0ACF83;
+    border-radius: 10px;
+    margin-bottom: 5%;
     padding: 20px 12px;
-    box-sizing:border-box;
-    transition:0.5s;
+    box-sizing: border-box;
+    transition: 0.5s;
     cursor: pointer;
 }
 
-h3{
-    text-align:center;
-    font-weight:600;
-    margin:10px 0;
-} 
-.course-col:hover{
-    box-shadow:0 0 20px 0px rgba(0,0,0,0.2) ;
+h3 {
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+.course-col:hover {
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 @media(max-width:700px) {
-    .row{
-        flex-direction:column;
+    .row {
+        flex-direction: column;
     }
 }
 
-.campus{
-    width:80%;
-    margin:auto;
-    text-align:center;
-    padding-top:50px;
+.campus {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
 
 }
 
-.campus-col{
-    flex-basis:32%;
-    border-radius:10px;
-    margin-bottom:30px;
-    position:relative;
-    overflow:hidden;
+.campus-col {
+    flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
     cursor: pointer;
 }
 
-.campus-col img{
-    width:100%;
-    display:block;
+.campus-col img {
+    width: 100%;
+    display: block;
 }
 
-.layer{
+.layer {
     background: transparent;
-    height:100%;
-    width:100%;
-    position:absolute;
-    top:0;
-    left:0;
-    transition:0.5s;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
 }
 
-.layer:hover{
+.layer:hover {
     background: #1D9BF0;
-    opacity:60%;
+    opacity: 60%;
 
 }
 
-.layer h3{
-    width:100%;
-    font-weight:500;
-    color:#fff;
-    font-size:26px;
-    bottom:0;
-    left:50%;
-    transform:translateX(-50%);
-    position:absolute;
-    opacity:0;
-    transition:0.5s;
+.layer h3 {
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 26px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;
+    transition: 0.5s;
 }
 
-.layer:hover h3{
-     bottom:49%;
-     opacity:1;
+.layer:hover h3 {
+    bottom: 49%;
+    opacity: 1;
 }
 
-.facilities{
-    width:80%;
-    margin:auto;
-    text-align:center;
-    padding-top:100px;
+.facilities {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
 }
-.facilities-col{
-    flex-basis:31%;
+
+.facilities-col {
+    flex-basis: 31%;
     border-radius: 100px;
-    margin-bottom:5%;
-    text-align:center;
+    margin-bottom: 5%;
+    text-align: center;
 }
 
-.facilities-col img{
-    width:100%;
-    border-radius:10px;
+.facilities-col img {
+    width: 100%;
+    border-radius: 10px;
 }
 
-.facilities-col p{
-    padding:0;
-}
-.facilities-col h3{
-    margin-top:16px;
-    margin-bottom:15px;
-}
-.testimonials{
-    width:80%;
-    margin:auto;
-    padding-top:100px;
-    text-align:center;
+.facilities-col p {
+    padding: 0;
 }
 
-.testimonial-col{
+.facilities-col h3 {
+    margin-top: 16px;
+    margin-bottom: 15px;
+}
+
+.testimonials {
+    width: 80%;
+    margin: auto;
+    padding-top: 100px;
+    text-align: center;
+}
+
+.testimonial-col {
     flex-basis: 44%;
-    border-radius:10px;
-    margin-bottom:5%;
-    text-align:left;
-    background:#0ACF83;
-    padding:25px;
-    cursor:pointer;
-    display:flex;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background: #0ACF83;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
 }
-.testimonial-col img{
-    height:40px;
-    margin-left:5px;
-    margin-right:30px;
-    border-radius:70%;
+
+.testimonial-col img {
+    height: 40px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 70%;
 }
-.testimonial-col p{
-    padding:0;
-    color:#f0f0f0;
+
+.testimonial-col p {
+    padding: 0;
+    color: #f0f0f0;
 }
-.testimonial-col h3{
-    margin-top:15px;
-    text-align:left;
-    color:#f0f0f0;
+
+.testimonial-col h3 {
+    margin-top: 15px;
+    text-align: left;
+    color: #f0f0f0;
 }
-.testimonial-col .fa-solid{
-    color:#1D9BF0;
+
+.testimonial-col .fa-solid {
+    color: #1D9BF0;
 }
 
 @media (max-width: 700px) {
-    .testimonial-col img{
-        margin-left:0;
-        margin-right:15px;
+    .testimonial-col img {
+        margin-left: 0;
+        margin-right: 15px;
     }
 }
 
-.cta{
-    margin:100px auto;
-    width:80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(assets/school.jpg);
+.cta {
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(assets/school.jpg);
     background-position: center;
-    background-size:cover;
-    border-radius:10px;
-    text-align:center;
-    padding:100px 0;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
 }
-.cta h1{
-    color:#fff;
-    margin-bottom:40px;
-    padding:0;
+
+.cta h1 {
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
 }
+
 @media (max-width:700px) {
-    .cta h1{
-        font-size:24px;
+    .cta h1 {
+        font-size: 24px;
     }
 }
 
-.footer{
-    width:100%;
-    text-align:center;
-    padding:30px 0;
+.footer {
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
 }
 
-.footer h4{
-    margin-bottom:25px;
-    margin-top:20px;
-    font-weight:600px;
+.footer h4 {
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600px;
 }
 
-.icons .fa-brands{
-    color:#1D9BF0;
-    margin:0 13px;
-    cursor :pointer;
-    padding:18px 0;
-
-}
-
-.sub-header{
-    height:50vh;
-    width:100%;
-    background:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(assets/college-graduation.jpg );
-    background-position:center;
-    background-size:cover;
-    text-align:center;
-    color:#fff;
-}
-.sub-header h1{
-    margin-top:100px;
-}
-
-.about-us{
-    width:80%;
-    margin:auto;
-    padding-top:80px;
-    padding-bottom:50px;
-}
-
-.about-col{
-    flex-basis:48%;
-    padding:30px 2px;
+.icons .fa-brands {
+    color: #1D9BF0;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0;
 
 }
 
-.about-col img{
-    width:100%;
-
-}
-.about-col h1{
-    padding-top:0;
-
-}
-
-.about-col p{
-    padding : 15 0 25px;
+.sub-header {
+    height: 50vh;
+    width: 100%;
+    background: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(assets/college-graduation.jpg );
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
 }
 
-.btn{
+.sub-header h1 {
+    margin-top: 100px;
+}
+
+.about-us {
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+
+.about-col {
+    flex-basis: 48%;
+    padding: 30px 2px;
+
+}
+
+.about-col img {
+    width: 100%;
+
+}
+
+.about-col h1 {
+    padding-top: 0;
+
+}
+
+.about-col p {
+    padding: 15 0 25px;
+}
+
+.btn {
     border: 1px solid #1D9BF0;
     background: transparent;
-    color:#1D9BF0;
-    margin-top:10px;
-    transition:0.1s;
+    color: #1D9BF0;
+    margin-top: 10px;
+    transition: 0.1s;
 
 }
-.btn:hover{
-    color:#fff;
+
+.btn:hover {
+    color: #fff;
 }
 
-.blog-content{
-    width:80%;
-    margin:auto;
-    padding:60px 0;
+.blog-content {
+    width: 80%;
+    margin: auto;
+    padding: 60px 0;
 }
-.blog-left{
-    flex-basis:65%;
+
+.blog-left {
+    flex-basis: 65%;
 }
-.blog-left img{
-    width:100%;
+
+.blog-left img {
+    width: 100%;
 }
-.blog-left h2{
+
+.blog-left h2 {
     color: #222;
-    font-weight:600;
-    margin:30px 0;
-}
-.blog-left p{
-    color:#999;
-    padding:0;
-}
-.blog-right{
-    flex-basis:32%;
+    font-weight: 600;
+    margin: 30px 0;
 }
 
-.blog-right h3{
-    background:#1D9BF0;
-    color:#fff;
-    padding:7px 0;
-    font-size:16px;
-    margin-bottom:20px;
-}
-.blog-right div{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    color:#555;
-    padding:8px;
-    box-sizing:border-box;
-}
-.comment-box{
-    border :1px solid #ccc;
-    margin:50px 0;
-    padding:10px 20px;
-}
-.comment-box h3{
-    text-align:left;
-}
-.comment-form input, .comment-form textarea{
-    width:100%;
-    padding:10px;
-    margin:15px 0;
-    box-sizing:border-box;
-    border:none;
-    outline:none;
-    background:#f0f0f0;
+.blog-left p {
+    color: #999;
+    padding: 0;
 }
 
-.comment-form button{
-    top:-1em;
+.blog-right {
+    flex-basis: 32%;
 }
+
+.blog-right h3 {
+    background: #1D9BF0;
+    color: #fff;
+    padding: 7px 0;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.blog-right div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #555;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.comment-box {
+    border: 1px solid #ccc;
+    margin: 50px 0;
+    padding: 10px 20px;
+}
+
+.comment-box h3 {
+    text-align: left;
+}
+
+.comment-form input,
+.comment-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: #f0f0f0;
+}
+
+.comment-form button {
+    top: -1em;
+}
+
 @media (max-width:700px) {
-    .sub-header h1{
-        font-size:24px;
+    .sub-header h1 {
+        font-size: 24px;
     }
 }
 
-.location{
-    width:80%;
-    margin:auto;
-    padding:80px 0;
+.location {
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
 
 }
-.location iframe{
-    width:100%;
-}
-.contact-us{
-    width:80%;
-    margin:auto;
+
+.location iframe {
+    width: 100%;
 }
 
-.contact-col{
-    flex-basis:48%;
-    margin-bottom:30px;
+.contact-us {
+    width: 80%;
+    margin: auto;
 }
 
-.contact-col div{
-    display:flex;
-    align-items:center;
-    margin-bottom:40px;
+.contact-col {
+    flex-basis: 48%;
+    margin-bottom: 30px;
 }
 
-.contact-col .fa-solid{
-    font-size:28px;
+.contact-col div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.contact-col .fa-solid {
+    font-size: 28px;
     color: #1D9BF0;
-    margin:10px;
-    margin-right:30px;
+    margin: 10px;
+    margin-right: 30px;
 }
 
-.contact-col div p{
-    padding:0;
+.contact-col div p {
+    padding: 0;
 }
-.contact-col div h5{
-    font-size:20px;
-    margin-bottom:5px;
-    color:#555;
-    font-weight:400;
+
+.contact-col div h5 {
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
 }
-.contact-col input, .contact-col textarea{
-    width:100%;
-    padding:15px;
-    margin-bottom:17px;
-    outline:none;
-    border:1px solid #ccc;
-    box-sizing:border-box;
+
+.contact-col input,
+.contact-col textarea {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
